--- a/resources/scss/common.scss
+++ b/resources/scss/common.scss
@@ -149,3 +149,122 @@ sans-serif;
         opacity: 0;
     }
 }
+
+.leaflet-container{
+    background: #333333 url("@/../images/grid.png") repeat;
+    background-size: 100px 100px;
+    &.day{
+        background-image: url("@/../images/grid-light.png");
+    }
+}
+
+
+$loaderWidth: 500px;
+$loaderContentWidth: 500px;
+.loader {
+    position: fixed;
+    display: grid;
+    grid-template-columns: $loaderWidth;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%) scaleY(0);
+    transform-origin: top center;
+    overflow: hidden;
+    transition: all 0.25s ease-in-out;
+
+    &.visible {
+        transform: translateX(-50%) scaleY(1);
+    }
+
+    #loaderShape {
+        path {
+            fill: $brand-dark;
+        }
+    }
+
+    &-content {
+        position: absolute;
+        display: grid;
+        grid-template-columns: $loaderContentWidth;
+        grid-gap: 0px;
+        align-items: center;
+        justify-items: center;
+        align-self: center;
+        top: 10%;
+        bottom: 15%;
+        left: 50%;
+        transform: translateX(-50%);
+        color: $brand-light;
+        padding: 10px 0 0 0;
+    }
+    &-text {
+        font-family: $brand-title;
+        text-transform: uppercase;
+        font-size: 12px;
+        line-height: 12px;
+        font-weight: 900;
+        letter-spacing: 2px;
+        text-align: center;
+        user-select: none;
+    }
+
+    &-percent {
+        font-family: $brand-text;
+        font-size: 12px;
+        position: absolute;
+    }
+
+    &-spinner {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+}
+
+.sk-cube-grid {
+    width: 40px;
+    height: 40px;
+    border-radius: 44px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 2px;
+
+    .sk-cube {
+        width: 100%;
+        height: 100%;
+        border-radius: 2px;
+
+        background-color: $brand-accent;
+        animation: sk-cubeGridScaleDelay 1.3s infinite linear;
+    }
+
+    .sk-cube1 {background-color: $brand-light; animation-delay: 0.15s; }
+    .sk-cube2 {background-color: $brand-accent;animation-delay: 0.25s; }
+    .sk-cube3 {background-color: $brand-light;animation-delay: 0.35s; }
+    .sk-cube4 {background-color: $brand-accent;animation-delay: 0.05s; }
+    .sk-cube5 {background-color: $brand-light;animation-delay: 0.15s; }
+    .sk-cube6 {background-color: $brand-accent;animation-delay: 0.25s; }
+    .sk-cube7 {background-color: $brand-light;animation-delay: 0s; }
+    .sk-cube8 {background-color: $brand-accent;animation-delay: 0.05s; }
+    .sk-cube9 {background-color: $brand-light;animation-delay: 0.15s; }
+}
+
+@-webkit-keyframes sk-cubeGridScaleDelay {
+    0%, 70%, 100% {
+        -webkit-transform: scale3D(1, 1, 1);
+        transform: scale3D(1, 1, 1);
+    } 35% {
+          -webkit-transform: scale3D(0, 0, 1);
+          transform: scale3D(0, 0, 1);
+      }
+}
+
+@keyframes sk-cubeGridScaleDelay {
+    0%, 70%, 100% {
+        -webkit-transform: scale3D(1, 1, 1);
+        transform: scale3D(1, 1, 1);
+    } 35% {
+          -webkit-transform: scale3D(0, 0, 1);
+          transform: scale3D(0, 0, 1);
+      }
+}
